WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181708
Can't scroll iframe after toggling it to display:none and back
https://bugs.webkit.org/show_bug.cgi?id=181708
Summary
Can't scroll iframe after toggling it to display:none and back
Simon Fraser (smfr)
Reported
2018-01-16 16:52:17 PST
Can't scroll iframe after toggling it to display:none and back
Attachments
Patch
(6.07 KB, patch)
2018-01-16 16:53 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2018-01-16 16:53:55 PST
Created
attachment 331442
[details]
Patch
Simon Fraser (smfr)
Comment 2
2018-01-16 16:54:16 PST
rdar://problem/13234778
WebKit Commit Bot
Comment 3
2018-01-16 17:34:47 PST
Comment on
attachment 331442
[details]
Patch Clearing flags on attachment: 331442 Committed
r227011
: <
https://trac.webkit.org/changeset/227011
>
WebKit Commit Bot
Comment 4
2018-01-16 17:34:48 PST
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 5
2018-01-18 21:04:14 PST
This change caused LayoutTest fast/frames/hidpi-position-iframe-on-device-pixel.html to consistently time out macOS Debug WK2 bots:
https://build.webkit.org/results/Apple%20High%20Sierra%20Debug%20WK2%20(Tests)/r227174%20(1674)/results.html
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast%2Fframes%2Fhidpi-position-iframe-on-device-pixel.html
Simon Fraser (smfr)
Comment 6
2018-01-19 11:21:12 PST
Thanks, will look.
Simon Fraser (smfr)
Comment 7
2018-01-22 13:46:14 PST
I can't reproduce the timeouts.
Simon Fraser (smfr)
Comment 8
2018-01-22 13:49:51 PST
The test is pretty slow, though. Maybe I made it slower.
Simon Fraser (smfr)
Comment 9
2018-01-22 14:36:14 PST
Yeah, now we're adding to the scrollableAreaSet even before we know that the frame is scrollable.
Simon Fraser (smfr)
Comment 10
2018-01-22 15:13:07 PST
Fixing via
bug 181959
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug